# agentsphere

./: .gitignore  .pylintrc  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: __init__.py  agent.py  repo.py  tools.py  wss.py
app/models/: models.py  repo.py
app/services/: auth.py  browser.py  example_service.py  helpers.py  knowledge.py  litellm_wrapper.py  llm.py  llm_wrapper.py  queue.py  tooldb.py  toolvectordb.py  vectordb.py  wss.py
app/services/embedder/: __init__.py  ollama_embedder.py  text_embedder.py  vertex_ai_embedder.py
app/services/object_store/: FireStore.py  MongoLocalStore.py  MongoStore.py  ObjectStoreInterface.py  fire_store.py  mongo_local.py  mongo_store.py  object_store.py
app/services/vectordb/: firestore_vector_db.py  milvus_db.py  vector_db.py
client/: client.py
tests/: llm_wrapper_test.py  main_test.py  response_toolcall_test.py  server_test.py  test_firestore_vector_db.py  test_knowledge.py
tests/resources/: serper_result.json
tests/resources/websites/: www.apple.com.html
